--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <div class="row"></div>
     <div class="container">
       <div class="row">
-        <div class="col-md-3 ubicacion-grid-00"></div>
-        <div class="col-md-6 d-flex justify-content-around ubicacion-grid-01">
+        <div class="col-md-3 location-grid-00"></div>
+        <div class="col-md-6 d-flex justify-content-around location-grid-01">
           <div class="card card-cascade narrower">
             <!-- Card image -->
             <div class="view view-cascade overlay">
@@ -64,20 +64,20 @@
                 <i class="fas fa-utensils"></i>
               </h5>
               <!-- Title -->
-              <h4 class="nombre-pokemon font-weight-bold card-title">
+              <h4 class="pokemon-name font-weight-bold card-title">
                 Bulbasaur
               </h4>
               <!-- Text -->
               <div class="container">
                 <div class="row">
-                  <div class="col h5 text-white bg-dark habilidad0">Column</div>
-                  <div class="col h5 text-white bg-dark habilidad1">Column</div>
+                  <div class="col h5 text-white bg-dark ability0">Column</div>
+                  <div class="col h5 text-white bg-dark ability1">Column</div>
                   <div class="w-100"></div>
-                  <div class="col h5 text-white bg-dark habilidad2">Column</div>
-                  <div class="col h5 text-white bg-dark habilidad3">Column</div>
+                  <div class="col h5 text-white bg-dark ability2">Column</div>
+                  <div class="col h5 text-white bg-dark ability3">Column</div>
                   <div class="w-100"></div>
-                  <div class="col h5 text-white bg-dark habilidad4">Column</div>
-                  <div class="col h5 text-white bg-dark habilidad5">Column</div>
+                  <div class="col h5 text-white bg-dark ability4">Column</div>
+                  <div class="col h5 text-white bg-dark ability5">Column</div>
                   <div class="w-100"></div>
                   <br />
                 </div>
@@ -95,7 +95,7 @@
       <div class="col-md-3 d-flex justify-content-around">
         <h1></h1>
       </div>
-      <div class="col-md-6 d-flex justify-content-around ubicacion-grid-22">
+      <div class="col-md-6 d-flex justify-content-around location-grid-22">
         <h1></h1>
       </div>
       <div class="col-md-3 d-flex justify-content-around">
